--- a/sigi/app/Resources/views/user/edit.html.twig
+++ b/sigi/app/Resources/views/user/edit.html.twig
@@ -11,7 +11,26 @@
 		  </div>
 
 		  <div id="col-right" class="group-form">
-		     {{ form_widget(student_form) }}
+
+			<div class="collapse" id="collapseAdmin">
+				<h3>Felicitaciones, este es un usuario Administrador</h3>
+			    
+			</div>
+
+			<div class="collapse" id="collapseStudent">
+				<h3>Información del Estudiante</h3>
+			    {{ form_widget(student_form) }}
+			</div>
+
+			<div class="collapse" id="collapseMentor">
+				<h3>Información del Mentor</h3>
+			    {{ form_widget(mentor_form) }}
+			</div>
+
+			<div class="collapse" id="collapseOther">
+				<h3>Información de Otro usuario</h3>	
+			    {{ form_widget(other_form) }}
+			</div>
 		  </div>
 		</div>
 
@@ -28,4 +47,49 @@
 	    {{ form_end(delete_form) }}
 	{% endif %}
 
+<script type="text/javascript">
+
+window.onload = function() {
+        collapseJS();
+    };
+
+
+function collapseJS()
+{
+	var selectedRol = $("#user_role").val();
+
+	switch(selectedRol){
+		case "ROLE_ADMIN":
+			$("#collapseAdmin").collapse('show');
+    		$("#collapseStudent").collapse('hide');
+    		$("#collapseMentor").collapse('hide');
+    		$("#collapseOther").collapse('hide');
+    		beak;
+
+		case "ROLE_STUDENT":
+    		$("#collapseAdmin").collapse('hide');
+    		$("#collapseStudent").collapse('show');
+    		$("#collapseMentor").collapse('hide');
+    		$("#collapseOther").collapse('hide');
+    		beak;
+
+		case "ROLE_MENTOR":
+    		$("#collapseAdmin").collapse('hide');
+    		$("#collapseStudent").collapse('hide');
+    		$("#collapseMentor").collapse('show');
+    		$("#collapseOther").collapse('hide');
+    		beak;
+
+		case "ROLE_OTHER":
+    		$("#collapseAdmin").collapse('hide');
+    		$("#collapseStudent").collapse('hide');
+    		$("#collapseMentor").collapse('hide');
+    		$("#collapseOther").collapse('show');
+    		beak;
+    	}
+}
+</script>
+
 {% endblock %}
+
+
